# RLSwordigoDesktop

./: .gitignore  LICENSE  Makefile  symbols_sorted.txt
assets/dexopt/: baseline.prof  baseline.profm
builder/: CMakeLists.txt
builder/appimage/: AppRun  build_appimage.sh
builder/flatpak/: com.quantumcreeperlabs.Swordigo.yaml
research/: savefile.md
research/experiments/: 32.txt  64.txt  64_und.txt  gl32.txt  gl64.txt  gl64_names.txt
src/: main.cpp  mod_loader.cpp  mod_loader.h
src/android/: asset_manager.c  asset_manager.h
src/game/: camera_override.cpp  camera_override.h
src/jni/: jni_bridge.cpp  jni_bridge.h
src/loader/: elf_loader.cpp  elf_loader.h
src/platform/: display.h  emulator.cpp  emulator.h  gui.cpp  gui.h
web/: changelog.html  download.html  index.html  main.js  research.html  style.css  technical.html
